2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* poe-18.el (walk-windows): New function.

	* poe-xemacs.el
	(set-extent-properties): New function.
	(run-at-time): New function.
	(cancel-timer): New function.
	(with-timeout-handler): New function.
	(with-timeout): New function.

	* poe.el (remassq): New function.
	(remassoc): New function.
	(remrassoc): New function.
	(get-buffer-window-list): New function.
	(save-selected-frame): New macro.

2000-02-10  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe.el (replace-match): Redefined to add `STRING' optional
	argument.

2000-02-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (mod): Define as an alias for `%'.
	(overlayp, move-overlay, delete-overlay, overlay-start,
	overlay-end, overlay-buffer, overlay-properties, overlays-at,
	overlays-in, next-overlay-change, previous-overlay-change,
	overlay-lists, overlay-recenter, overlay-get):
	Define as null function.

2000-02-05  MORIOKA Tomohiko  <tomo@m17n.org>

	* mcs-20.el (mime-charset-coding-system-alist): Add
	`iso-2022-jp-3'.

2000-02-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe.el (read-file-name): Replacement for Emacs 19.28 and earlier
	(except for Emacs 18) or XEmacs 19.13 and earlier, for
	compatibility.

2000-02-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* timezone.el (timezone-floor): Eliminated.
	(timezone-fix-time-2): Use `floor' instead of `timezone-floor'.

	* poe-18.el (current-time): Fixed leap year count bug.
	(set-time-zone-rule): New function.
	(current-time-zone): Use `set-time-zone-rule'.
	(floor): New function.
	(window-live-p): New function.
	(read-from-minibuffer): Redefined to add `HIST' optional argument.
	(accept-process-output): Redefined to add `TIMEOUT' and
	`TIMEOUT-MSECS' optional arguments.
	(get-buffer-window): Redefined to add `FRAME' optional argument.

	* poe.el (completing-read): Redefined to adjust optional arguments
	for some emacsen.

2000-01-31  Mikio Nakajima  <minakaji@osaka.email.ne.jp>
